<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Help"
    tools:ignore="HardcodedText">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/wallpaper"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/androids"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:background="@drawable/rounded_corner2"
                android:src="@drawable/ai" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:gravity="center_vertical"
                android:text="@string/title2"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold" />


        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:padding="26dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textSize="20dp"
                android:textStyle="bold"
                android:text="@string/terms1"/>
            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@string/terms2"/>
            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms3"/>
            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms4"/>
            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms5"/>
            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms6"/>
            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms7"/>
            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms8"/>
            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms9"/>
            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms10"/>
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms11"/>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms12"/>
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms13"/>
            <TextView
                android:id="@+id/textView14"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms14"/>
            <TextView
                android:id="@+id/textView15"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms15"/>
            <TextView
                android:id="@+id/textView16"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms16"/>
            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms17"/>
            <TextView
                android:id="@+id/textView18"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms18"/>
            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms19"/>
            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="@string/terms20"/>
            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms21"/>
            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms22"/>
            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms23"/>
            <TextView
                android:id="@+id/textView24"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms24"/>
            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms25"/>
            <TextView
                android:id="@+id/textView26"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms26"/>
            <TextView
                android:id="@+id/textView27"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms27"/>
            <TextView
                android:id="@+id/textView28"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms28"/>
            <TextView
                android:id="@+id/textView29"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:text="@string/terms29"/>
            <TextView
                android:id="@+id/textView30"
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:textStyle="bold"
                android:text="@string/terms30"/>
            <TextView
                android:id="@+id/textView31"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms31"/>
            <TextView
                android:id="@+id/textView32"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:text="@string/terms32"/>


            <!-- You can add more views here if needed -->
        </LinearLayout>
        </ScrollView>







    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>