<?xml version="1.0" encoding="utf-8"?>

<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartActivity"
    tools:ignore="HardcodedText">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:background="@drawable/wallpaper"
        android:orientation="vertical" >


        <TextView
            android:id="@+id/textview2"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="@color/gray"
            android:textSize="40sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/names"
            android:textColor="@color/gray"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textview4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:gravity="center_vertical|center_horizontal"
            android:text="v1.1 release"
            android:textColor="@color/gray"
            android:textSize="10sp"/>

        <!--
        Insert a button with width 150dp, height based on content that mentions "Enter"
          -->

        <ImageView
            android:id="@+id/androids"
            android:layout_width="234dp"
            android:layout_height="246dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_corner2"
            android:src="@drawable/ai" />

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="-110dp"
            android:background="@drawable/rounded_corner"
            android:backgroundTint="@color/white"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/button_enter" />

        <EditText
            android:id="@+id/input1"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/rounded_corner"
            android:hint=" Server IP..."
            android:textStyle="bold" />


    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>