<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Menu"
    tools:ignore="HardcodedText">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:background="@drawable/wallpaper"
        android:orientation="vertical" >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/androids"
                android:layout_width="134dp"
                android:layout_height="134dp"
                android:background="@drawable/rounded_corner2"
                android:src="@drawable/ai" />

            <TextView
                android:id="@+id/textview"
                android:layout_width="0dp"
                android:layout_height="130dp"
                android:layout_marginLeft="30dp"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:gravity="center_vertical"
                android:text="@string/title2"
                android:textColor="@color/white"
                android:textSize="50dp"
                android:textStyle="bold" />


    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner"
        android:padding="26dp"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp">

        <!-- Button inside the white box -->
        <TextView
            android:id="@+id/textview1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:fontFamily="serif-monospace"
            android:gravity="center_vertical"
            android:text="Train your own customized AI on your data "
            android:textColor="@color/gray"
            android:textSize="20dp"
            android:textStyle="bold" />
        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:backgroundTint="@color/teal_200"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_corner"
            android:text="@string/choice1" />

        <!-- You can add more views here if needed -->
    </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner"
            android:padding="26dp"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/textview2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif-monospace"
                android:gravity="center_vertical"
                android:text="Talk with your pretrained AI"
                android:textColor="@color/gray"
                android:textSize="20dp"
                android:textStyle="bold" />
            <Button
                android:id="@+id/button2"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|center_horizontal"
                android:backgroundTint="@color/teal_200"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_corner"
                android:text="@string/choice2" />

            <!-- You can add more views here if needed -->
        </LinearLayout>




        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/fragment_container"/>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/navigation_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
